--- a/Views/TravelPackage/Index.cshtml
+++ b/Views/TravelPackage/Index.cshtml
@@ -25,11 +25,18 @@
                         <th scope="row">@item.Id</th>
                         <td>@item.Name</td>
                         <td>@item.Description</td>
-                        <td>@item.ImgSource</td>
-                        <td>@item.Price</td>
-                        <td>@item.Dutation</td>
+                        <td><img height="200" src="@item.ImgSource"></td>
+                        <td>@item.Price $</td>
+                        <td>@item.Dutation giorni</td>
                         <td>@item.Category.Name</td>
-                        <td>@item.Destinations.ToString()</td>
+                        <td>
+                            <ul>
+                                @foreach (var des in item.Destinations)
+                                {
+                                    <li>@des.Name</li>
+                                }
+                            </ul>
+                        </td>
                         <td>
                             <a class="btn btn-primary" href="@Url.Action("Update","TravelPackage", new {id = item.Id})">Update</a>
                             <form asp-action="Delete" asp-controller="TravelPackage" asp-route-id="@item.Id" method="post">
