--- a/Views/TravelPackage/Index.cshtml
+++ b/Views/TravelPackage/Index.cshtml
@@ -3,8 +3,8 @@
 <div class="text-center">
     @if (Model.Count > 0)
     {
-        <h1>Feature list</h1>
-        <a class="btn btn-primary" href="@Url.Action("Create", "TravelPackage")">Inserisci un nuovo film </a>
+        <h1>Lista Pacchetti</h1>
+        <a class="btn btn-primary" href="@Url.Action("Create", "TravelPackage")">Inserisci un nuovo pacchetto </a>
         <table class="table table-striped">
             <thead>
                 <tr>
@@ -38,6 +38,7 @@
                             </ul>
                         </td>
                         <td>
+                            <a class="btn btn-warning" href="@Url.Action("Detail", "TravelPackage", new {id = item.Id})">Dettaglio</a>
                             <a class="btn btn-primary" href="@Url.Action("Update","TravelPackage", new {id = item.Id})">Update</a>
                             <form asp-action="Delete" asp-controller="TravelPackage" asp-route-id="@item.Id" method="post">
                                 <button class="btn btn-danger">Delete</button>
