--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,7 +2,50 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div  class="text-center">
+    <h1>Our amazing tours</h1>
+    <p>lorem ipsum dolor</p>
+    <input type="text" id="js-search" />
+    <div class="container py-4">
+        <div class="row">
+        </div>
+    </div>
 </div>
+
+<script type="text/javascript">
+    
+    const searchBar = document.querySelector("#js-search");
+    const body = document.querySelector(".row")
+    body.addEventListener("onload",fetchAll())
+    searchBar.addEventListener("keyup", fetchAll)
+    //funzoine fetch dei risultati
+    function fetchAll(){
+        axios.get("/api/home/getall",
+        {
+            params:{
+                search :searchBar.value
+            }
+        }
+        )
+        .then(res => {
+            console.log(res)
+            let data = res.data
+            body.innerHTML = ""
+            data.forEach(e => {
+                body.innerHTML+=
+                 ` <div class="col-4">
+                        <div class="card text-center">
+                            <img height="300" src="${e.imgSource}" />
+                            <h3 class="py-2">${e.name}</h3>
+                            <p>${e.description}</p>
+                            <h4>${e.category.name}</h4>
+                            <hr />
+                            <small> ${e.dutation} giorni / ${[...e.destinations].length} destinazioni</small>
+                            <p><strong>${e.price}</strong> $/persona</p>
+                        </div>
+                    </div>`
+            })
+        })
+        .catch(err => console.log(err))
+    }
+</script>
