--- a/Views/Shared/_LoginPartial.cshtml
+++ b/Views/Shared/_LoginPartial.cshtml
@@ -2,25 +2,26 @@
 @inject SignInManager<IdentityUser> SignInManager
 @inject UserManager<IdentityUser> UserManager
 
-<ul class="navbar-nav">
+<ul class="navbar-nav ">
 @if (SignInManager.IsSignedIn(User))
 {
     <li class="nav-item">
-        <a  class=nav-link text-dark" href="@Url.Action("Index", "TravelPackage")" title="Manage">Admin</a>
+        <a  class="nav-link text-success" href="@Url.Action("Index", "TravelPackage")" title="Manage">Admin</a>
     </li>
     <li class="nav-item">
         <form  class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
-            <button  type="submit" class="nav-link btn btn-link text-dark">Logout</button>
+            <button  type="submit" class="nav-link btn btn-link text-success">Logout</button>
         </form>
     </li>
 }
 else
 {
     <li class="nav-item">
-        <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Register">Register</a>
+        <a class="nav-link text-success" asp-area="Identity" asp-page="/Account/Register">Register</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Login" asp-route-returnUrl="@Url.Action("Index", "TravelPackage")">Login</a>
+        <a class="nav-link text-success:w
+" asp-area="Identity" asp-page="/Account/Login" asp-route-returnUrl="@Url.Action("Index", "TravelPackage")">Login</a>
     </li>
 }
 </ul>
