--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -37,9 +37,9 @@
                 body.innerHTML+=
                  ` <div class="col-4">
                         <a class="text-decoration-none" href="Home/Detail/${e.id}">
-                        <div class="card text-center">
+                        <div class="card bg-light bg-gradient text-center text-primary border rounded-xl border-succes">
                             <img loading="lazy" height="300" src="${e.imgSource}" />
-                            <h3 class="py-2">${e.name}</h3>
+                            <h3 class="py-2 text-uppercase">${e.name}</h3>
                             <p>${e.description}</p>
                             <h4>${e.category.name}</h4>
                             <hr />
