--- a/Views/Shared/_Footer.cshtml
+++ b/Views/Shared/_Footer.cshtml
@@ -1,5 +1,5 @@
 ﻿
-<footer class="border-top footer border-warning  text-center pt-3">
-        <h2>&copy; 2022 - My Travel Agency</h2>
+<footer class="border-top footer border-success bg-dark text-success  text-center pt-3">
+        <h3>&copy; 2022 - My Travel Agency</h3>
 
 </footer>
