--- a/Views/TravelPackage/Create.cshtml
+++ b/Views/TravelPackage/Create.cshtml
@@ -3,7 +3,7 @@
 }
 @model TravelPackageViewModel
 <body>
-    <section>
+    <section class="text-success">
         <div class="container">
             <form asp-controller="TravelPackage" asp-action="Create" method="post" class="text-danger">
                 @Html.AntiForgeryToken()
