--- a/Views/TravelPackage/Index.cshtml
+++ b/Views/TravelPackage/Index.cshtml
@@ -6,7 +6,7 @@
         <h1>Lista Pacchetti</h1>
         <a class="btn btn-primary" href="@Url.Action("Create", "TravelPackage")">Inserisci un nuovo pacchetto </a>
         <table class="table table-striped">
-            <thead>
+            <thead class="text-success">
                 <tr>
                     <th scope="col">#</th>
                     <th scope="col">Nome</th>
@@ -21,7 +21,7 @@
             <tbody>
                 @foreach (var item in Model)
                 {
-                    <tr>
+                    <tr class="text-success">
                         <th scope="row">@item.Id</th>
                         <td>@item.Name</td>
                         <td>@item.Description</td>
