--- a/Views/TravelPackage/Detail.cshtml
+++ b/Views/TravelPackage/Detail.cshtml
@@ -1,5 +1,7 @@
 ﻿@model TravelPackage
-
+@{
+    Layout = "_LayoutAdmin";
+}
 <body>
     <div class="container">
         <img src="@Model.ImgSource" />
