--- a/Views/TravelPackage/Update.cshtml
+++ b/Views/TravelPackage/Update.cshtml
@@ -1,5 +1,6 @@
 ﻿@{
     ViewData["Title"] = "Update Page";
+    Layout = "_LayoutAdmin";
 }
 @model TravelPackageViewModel
 <body>
@@ -69,7 +70,7 @@
                         }
                     </select>
                 </div>
-                <button type="submit" class="btn btn-danger">Crea Pacchetto</button>
+                <button type="submit" class="btn btn-danger">Aggiorna Pacchetto</button>
             </form>
         </div>
     </section>
