--- a/Views/Home/Detail.cshtml
+++ b/Views/Home/Detail.cshtml
@@ -5,14 +5,43 @@
 <div class="container">
     <div class="card">
     </div>
+    <form id="js-message-send">
+        <div class="mb-3">
+            <label for="js-message-mail">Inserisci la tua email</label>
+            <input type="email" id="js-message-mail">
+        </div>
+        <div class="mb-3">
+            <label for="js-message-title">Inserisci il titolo del tuo messaggio:</label>
+            <input type="text" id="js-message-title">
+        </div>
+        <div class="mb-3">
+            <label for="js-message-body">Inserisci il corpo del messaggio:</label>
+            <textarea id="js-message-body"></textarea>
+        </div>
+        <button class="btn-primary btn-primary" type="submit">Invio</button>
+    </form>
 </div>
 
 <script type="text/javascript">
     const id = @id
     const card = document.querySelector(".card")
+    const form = document.querySelector("form")
 
+    form.addEventListener( "submit",e => sendMessage(e))
     card.addEventListener("onload", get())
 
+    function sendMessage(e){
+        e.preventDefault();
+        axios.post("/api/message/send",
+        {
+            travelPackageId : @id,
+            email : document.querySelector("#js-message-mail").value,
+            title : document.querySelector("#js-message-title").value,
+            body : document.querySelector("#js-message-body").value,
+        })
+        .then( res =>console.log(res))
+        .catch(err => console.log(err))
+    }
     function get() {
         axios.get('/api/home/get', {
             params: {
