aggiunto style del form

--- a/Views/Home/Detail.cshtml
+++ b/Views/Home/Detail.cshtml
@@ -5,20 +5,21 @@
 <div class="container">
     <div class="card">
     </div>
-    <form id="js-message-send">
-        <div class="mb-3">
+    <h1>Contattaci per saperne di piu!</h1>
+    <form class="p-2 rounded my-2 bg-white" id="js-message-send">
+        <div class=" form-group mb-3">
             <label for="js-message-mail">Inserisci la tua email</label>
-            <input type="email" id="js-message-mail">
+            <input class="form-control" type="email" id="js-message-mail">
         </div>
-        <div class="mb-3">
+        <div class="form-groupmb-3">
             <label for="js-message-title">Inserisci il titolo del tuo messaggio:</label>
-            <input type="text" id="js-message-title">
+            <input type="text" class="form-control" id="js-message-title">
         </div>
-        <div class="mb-3">
+        <div class="mb-3 form-group">
             <label for="js-message-body">Inserisci il corpo del messaggio:</label>
-            <textarea id="js-message-body"></textarea>
+            <textarea class="form-control" rows="6" id="js-message-body"></textarea>
         </div>
-        <button class="btn-primary btn-primary" type="submit">Invio</button>
+        <button class="btn-primary btn" type="submit">Invio</button>
     </form>
 </div>
 
