--- a/Views/TravelPackage/Index.cshtml
+++ b/Views/TravelPackage/Index.cshtml
@@ -3,6 +3,9 @@
     Layout = "_LayoutAdmin";
 }
 <div class="text-center">
+    <div>
+        <a class="btn btn-info"href="@Url.Action("Export", "TravelPackage")">Esporta i pacchetti</a>
+    </div>
     @if (Model.Count > 0)
     {
         <h1>Lista Pacchetti</h1>
